# itunes-playlistgen

./: Pipfile  _album_shuffle.py  album-stretch.ipynb  functions.applescript  playlistgen.py  playlistweb.py  pyproject.toml  score-metrics.ipynb  setup.py  shuffle_test.py  timefill.py
itunes-shim/: itunes-shim-Bridging-Header.h
itunes-shim/itunes-shim/: main.swift
itunes-shim/itunes-shim-python/: cffi-generator.py  embedding-api.h  embedding-init.py  python.xcconfig  sysconfig-emitter.py
itunes-shim/itunes-shim.xcodeproj/: project.pbxproj
itunes-shim/itunes-shim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
itunes-shim/itunes-shim.xcodeproj/project.xcworkspace/xcuserdata/habnabit.xcuserdatad/: UserInterfaceState.xcuserstate
itunes-shim/itunes-shim.xcodeproj/xcuserdata/habnabit.xcuserdatad/xcschemes/: xcschememanagement.plist
playlistgen/: __main__.py  _album_shuffle.py  _criteria_parser.py  _discogs_match.py  _volume_analysis.py  _xport.py  functions.applescript  playlistgen.py  playlistweb.py
playlistgen/static/: .gitignore  site.html
resources/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
resources-starter/: .babelrc  .eslintrc.js  package.json
resources-starter/configs/webpack/: common.js  dev.js  prod.js
resources-starter/src/: eliot.tsx  index.tsx  meta.tsx  site.sass  timer.tsx  types.ts
resources-starter/src/components/: App.tsx
resources-starter/src/timefill/: actions.ts  components.tsx  epics.ts  reducer.ts  types.ts
resources/app/: actions.ts  alerts.jsx  components.tsx  extlens.ts  funcs.ts  index.jsx  index.tsx  meta.tsx  redux.ts  site.sass  tracks.jsx  tracks.tsx  types.ts
resources/app/album-shuffle/: actions.ts  components.tsx  epics.ts  reducer.ts  types.ts
resources/app/discogs-matcher/: actions.ts  components.tsx  epics.ts  reducer.ts  types.ts
resources/app/meta/: actions.ts  components.tsx  reducer.ts  types.ts
resources/app/timefill/: actions.ts  components.tsx  epics.ts  reducer.ts  types.ts
