[tool.poetry]
name = "playlistgen"
version = "0.1.0"
description = ""
authors = ["Harold Abnabit <_@habnab.it>"]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^0.15.5"
attrs = "^19.3"
cffi = "^1.14"
click = "^7.0"
cornice = "^4.0"
marshmallow = "^3.4"
numpy = "^1.15"
parsimonious = "^0.8.1"
py-applescript = "^1.0"
pyobjc-framework-AppleScriptKit = "^6.1"
pyobjc-framework-iTunesLibrary = "^6.1"
pyramid = "^1.10"
tqdm = "^4.24"
waitress = "^1.3"

[tool.poetry.scripts]
playlistgen = "playlistgen.playlistgen:main"

[tool.poetry.dev-dependencies]
flameprof = "^0.4.0"
ipython = "^7.12"
plop = "^0.4.0"
