[tool.poetry]
name = "playlistgen"
version = "0.1.0"
description = ""
authors = ["Harold Abnabit <_@habnab.it>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^0.15.5"
attrs = "^19.3"
cffi = "^1.15"
click = "^7.0"
cornice = "^4.0"
marshmallow = "^3.4"
numpy = "^1.22.3"
parsimonious = "^0.8.1"
py-applescript = "^1.0"
pyobjc-framework-AppleScriptKit = "^8.5"
pyobjc-framework-iTunesLibrary = "^8.5"
pyramid = "^1.10"
tqdm = "^4.24"
waitress = "^1.3"
#python3-discogs-client = "^2.3.2"
dataset = "^1.3.2"
gmpy_cffi = "^0.1"
pyte = "^0.8.0"
eliot = "^1.14.0"

[tool.poetry.scripts]
playlistgen = "playlistgen.playlistgen:main"

[tool.poetry.dev-dependencies]
flameprof = "^0.4.0"
ipython = "^7.12"
plop = "^0.4.0"
ipdb = "^0.13.3"
notebook = "^6.1.5"
pandas = "^1.1.4"
plotnine = "^0.7.1"
